@@ -24,8 +24,8 @@
 
 //#define _TEST_STABILITY
 
-static WCHAR SuRun_Beta[]={0x03B2,'1','1',
-//static WCHAR SuRun_Beta[]={'r','c','3',
+//static WCHAR SuRun_Beta[]={0x03B2,'1','1',
+static WCHAR SuRun_Beta[]={'r','c','1',
 #ifdef _TEST_STABILITY
     'a',
 #endif _TEST_STABILITY
@@ -35,7 +35,7 @@ static WCHAR SuRun_Beta[]={0x03B2,'1','1',
 //#define DoDBGTrace
 
 #ifdef BetaVer
-#define DoDBGTrace
+// #define DoDBGTrace
 #endif
 
 #ifdef _DEBUG 
